--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,7 +1,7 @@
-#Thu Oct 10 11:06:00 BST 2019
+#Mon Oct 28 13:48:31 GMT 2019
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 execution.default.webUi.enablePageLoadTimeout=false
 execution.default.webUi.pageLoadTimeout=30
 execution.default.webUi.ignorePageLoadTimeOutException=false
-execution.default.webUi.actionDelay=1
+execution.default.webUi.actionDelay=0
 execution.default.waitForIEHanging=400
