--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,13 +1,13 @@
-#Fri Oct 18 10:54:35 BST 2019
-analytics.authentication.token="WGA4n/i0VukpWz/mKFnxRlwqpOcU+HHgFRL1pfjoTTRVxNgwy67y1g\=\="
-analytics.integration.enable=true
+#Fri Oct 25 14:17:49 BST 2019
+analytics.authentication.token="sJR4macYqKQLT2pgQAoBmUPkBhKvSHrmWJQtQODrHUx2O5/J+5ZnNg\=\="
+analytics.integration.enable=false
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
-analytics.authentication.email="kD6NYktjl8/mVsk6Qf+kOPGYJLH2h8sXpEQCeCbzLfA\="
-analytics.authentication.password="Vk71mnAOb5lEJM/rx3S7SQ\=\="
+analytics.authentication.email="YMW2hQ6vSrhm1rtc4rasNshxDawkBEFKJ0uOIfDmcRPOOErNXIXNyw\=\="
+analytics.authentication.password="KT8JOVzAIqlDwzr433Fv5w\=\="
 analytics.authentication.encryptionEnabled=true
-analytics.team="{\\n  \\"id\\"\: 27535,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"Team sandeep.ramchandani\\"\\n}"
-analytics.project="{\\n  \\"id\\"\: 35881,\\n  \\"name\\"\: \\"First Project\\",\\n  \\"teamId\\"\: 27535\\n}"
+analytics.team="{\\n  \\"id\\"\: 28829,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"ODT_Test\\"\\n}"
+analytics.project="{\\n  \\"id\\"\: 37612,\\n  \\"name\\"\: \\"PINS_ODT_Test\\",\\n  \\"teamId\\"\: 28829\\n}"
 analytics.testresult.autosubmit=true
 analytics.testresult.attach.screenshot=true
-analytics.testresult.attach.log=true
+analytics.testresult.attach.log=false
 analytics.testresult.attach.capturedvideos=false
