--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,2 +1,2 @@
-#Tue Oct 08 16:28:09 BST 2019
-defaultFailureHandling="STOP_ON_FAILURE"
+#Wed Jan 29 11:43:57 GMT 2020
+defaultFailureHandling="CONTINUE_ON_FAILURE"
