Removed email settings

--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,2 +1,2 @@
-#Wed Jan 29 11:43:57 GMT 2020
-defaultFailureHandling="CONTINUE_ON_FAILURE"
+#Tue Feb 11 14:40:26 GMT 2020
+defaultFailureHandling="STOP_ON_FAILURE"
