--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,13 +1,6 @@
-#Thu Nov 07 13:34:29 GMT 2019
+#Fri Mar 13 11:24:45 GMT 2020
 analytics.authentication.token="Dj10nLLZhN1lZ8scjycYFV60ut2li0Jmn08yzf7CJgVQUHjvyKmK3A\=\="
 analytics.integration.enable=false
-analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
-analytics.authentication.email="YMW2hQ6vSrhm1rtc4rasNshxDawkBEFKJ0uOIfDmcRPOOErNXIXNyw\=\="
-analytics.authentication.password="KT8JOVzAIqlDwzr433Fv5w\=\="
-analytics.authentication.encryptionEnabled=true
 analytics.team="{\\n  \\"id\\"\: 28829,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"ODT_Test\\"\\n}"
 analytics.project="{\\n  \\"id\\"\: 37612,\\n  \\"name\\"\: \\"PINS_ODT_Test\\",\\n  \\"teamId\\"\: 28829\\n}"
-analytics.testresult.autosubmit=true
-analytics.testresult.attach.screenshot=true
-analytics.testresult.attach.log=false
-analytics.testresult.attach.capturedvideos=false
+analytics.onpremise.enable=false
