--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Wed Mar 18 10:36:04 GMT 2020
+#Thu Apr 02 14:55:56 BST 2020
 <<<<<<<=HEAD
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 execution.default.webUi.enablePageLoadTimeout=false
