--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,2 +1,2 @@
-#Thu Apr 02 14:55:56 BST 2020
-defaultFailureHandling="CONTINUE_ON_FAILURE"
+#Tue Apr 07 11:06:11 BST 2020
+defaultFailureHandling="STOP_ON_FAILURE"
