--- a/settings/internal/com.kms.katalon.core.webservice.properties
+++ b/settings/internal/com.kms.katalon.core.webservice.properties
@@ -1,4 +1,4 @@
-#Fri Mar 13 11:24:45 GMT 2020
+#Wed Apr 15 11:57:24 BST 2020
 <<<<<<<=HEAD
 webServiceMethods="[\\n  {\\n    \\"name\\"\: \\"GET\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"POST\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"PUT\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"DELETE\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"PATCH\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"HEAD\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"CONNECT\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"OPTIONS\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  },\\n  {\\n    \\"name\\"\: \\"TRACE\\",\\n    \\"type\\"\: \\"Standard\\",\\n    \\"description\\"\: \\"\\"\\n  }\\n]"
 =\=\=\=\=\=\=
