--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,9 +1,9 @@
-#Fri Mar 13 11:24:45 GMT 2020
+#Wed Apr 15 11:57:23 BST 2020
 <<<<<<<=HEAD
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
-execution.default.quitDriversAfterExecutingTestSuite=false
+execution.default.quitDriversAfterExecutingTestSuite=true
 execution.default.executionConfiguration="Chrome"
 mailConfig.encryptionEnabled=false
 mailConfig.host=""
@@ -25,5 +25,5 @@ mailConfig.htmlTemplate="<html><body><html><body>\\n<p>&nbsp;</p>\\n<center styl
 report.takeScreenshotOption=true
 report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
-execution.default.smartWaitMode=false
+execution.default.smartWaitMode=true
 execution.logTestSteps=true
