--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Thu Apr 02 14:55:56 BST 2020
+#Wed Apr 15 11:57:23 BST 2020
 <<<<<<<=HEAD
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 execution.default.webUi.enablePageLoadTimeout=false
@@ -8,3 +8,5 @@ execution.default.webUi.actionDelay=0
 execution.default.waitForIEHanging=400
 =\=\=\=\=\=\=
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
+execution.default.imageRecognitionEnabled=false
+execution.default.useDelayActionInSecond="SECONDS"
