--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
-#Tue Apr 07 14:03:08 BST 2020
+#Thu Apr 23 09:26:03 BST 2020
+<<<<<<<=HEAD
 defaultFailureHandling="STOP_ON_FAILURE"
-=======
-#Tue Apr 07 11:06:11 BST 2020
-defaultFailureHandling="STOP_ON_FAILURE"
->>>>>>> branch 'master' of https://github.com/sand273/PINS_ODT_TEST.git
+=\=\=\=\=\=\=
+>>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
