--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Fri Jun 26 14:18:58 BST 2020
+#Fri Jul 24 13:27:39 UTC 2020
 <<<<<<<=HEAD
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
@@ -28,3 +28,4 @@ report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: 
 execution.default.smartWaitMode=false
 execution.logTestSteps=true
 execution.launch.vmArgs=""
+plugin.reloadOption="ONLINE_AND_OFFLINE"
