--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,4 +1,4 @@
-#Fri Mar 13 11:24:45 GMT 2020
+#Fri Jul 24 13:27:39 UTC 2020
 analytics.authentication.token="Dj10nLLZhN1lZ8scjycYFV60ut2li0Jmn08yzf7CJgVQUHjvyKmK3A\=\="
 analytics.integration.enable=false
 analytics.team="{\\n  \\"id\\"\: 28829,\\n  \\"role\\"\: \\"OWNER\\",\\n  \\"name\\"\: \\"ODT_Test\\"\\n}"
