New Test added for Auto programming

--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Mon Jul 27 14:25:26 BST 2020
+#Thu Jul 30 15:44:05 BST 2020
 <<<<<<<=HEAD
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 execution.default.webUi.enablePageLoadTimeout=false
@@ -10,3 +10,5 @@ execution.default.waitForIEHanging=300
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
 execution.default.imageRecognitionEnabled=false
 execution.default.useDelayActionInSecond="SECONDS"
+execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true"
+execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,true;placeholder,true;selected,true;src,true;title,true;type,true;text,true;linked_text,true"
