--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,5 +1,5 @@
-#Thu Apr 23 09:26:03 BST 2020
+#Thu Jul 30 15:43:45 BST 2020
 <<<<<<<=HEAD
-defaultFailureHandling="STOP_ON_FAILURE"
+defaultFailureHandling="CONTINUE_ON_FAILURE"
 =\=\=\=\=\=\=
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
