Submitting changes applied to backstage scenarios.

--- a/settings/internal/com.kms.katalon.composer.testcase.settings.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.settings.properties
@@ -1,5 +1,5 @@
-#Thu Jul 30 15:43:45 BST 2020
+#Thu Aug 06 13:23:13 BST 2020
 <<<<<<<=HEAD
-defaultFailureHandling="CONTINUE_ON_FAILURE"
+defaultFailureHandling="STOP_ON_FAILURE"
 =\=\=\=\=\=\=
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
