Changes applied to backstage tests.

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Thu Aug 06 10:28:46 BST 2020
+#Mon Aug 10 16:54:36 BST 2020
 <<<<<<<=HEAD
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
@@ -25,7 +25,7 @@ mailConfig.htmlTemplate="<html><body><html><body>\\n<p>&nbsp;</p>\\n<center styl
 report.takeScreenshotOption=true
 report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
 >>>>>>>=branch 'master' of https\://github.com/sand273/PINS_ODT_TEST.git
-execution.default.smartWaitMode=false
+execution.default.smartWaitMode=true
 execution.logTestSteps=true
 execution.launch.vmArgs=""
 mailConfig.sendTestSuiteReport=true
